--- a/style.css
+++ b/style.css
@@ -41,6 +41,8 @@ body {
 
 header {
     grid-area: header;
+    --startY: -100%;
+    animation: move .2s;
     background: var(--Brand-Colors-Explorer-dark, #065E7C);
 }
 
@@ -162,6 +164,8 @@ footer {
     font-style: normal;
     font-weight: 600;
     line-height: normal;
+    --startY: 100%;
+    animation: move .2s;
 }
 
 .sidebar {
@@ -229,4 +233,35 @@ footer {
   .search-bar:-ms-input-placeholder { /* IE 10+ */
     color: white;
     opacity: 0.5;
+  }
+
+  section li img {
+    transition: all 200ms ease-out;
+  }
+  
+  section li img:hover {
+    filter: hue-rotate(7deg) contrast(101%) saturate(200%);
+    transform: scale(1.1) rotate(-2deg);
+  }
+
+  @keyframes move {
+    from {
+      transform: translateY(var(--startY));
+    }
+  }
+  
+  section li {
+    --delay: .4s;
+    animation: appear .4s var(--delay) backwards;
+  }
+  
+  @keyframes appear {
+    0% {
+      opacity: 0;
+      transform: scale(0.7);
+    }
+  
+    50% {
+      transform: scale(1.2);
+    }
   }
